[package]
name = "can_utils"
version = "0.0.5"
authors = ["Raphael Nissl <raphael@nissl.net>"]
edition = "2018"
repository = "https://github.com:rapnis/can-utils-rs.git"
license = "GPL3"
readme = "README.md"
description = "Rusty implementation of famous can-utils (for learning purposes)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketcan = "1.7.0"
clap = "2.33.3"
log = "0.4.14"

[[bin]]
name = "canfdtest"
path = "src/bin/canfdtest.rs"

[[bin]]
name = "cansend"
path = "src/bin/cansend.rs"

