[package]
name = "can_utils"
version = "0.0.5"
authors = ["Raphael Nissl <raphael.nissl@baremetal-systems.com>"]
edition = "2018"
repository = "https://github.com:rapnis/can-utils-rs.git"
license = "GPL3"
readme = "README.md"
description = "Rusty implementation of famous can-utils (for learning purposes)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketcan = { version = "2.0.0", git = "https://github.com/rapnis/socketcan-rs", branch = "master" }
clap = "2.33.3"
log = "0.4.14"
simple_logger = "1.11.0"

[[bin]]
name = "canfdtest"
path = "src/bin/canfdtest.rs"

[[bin]]
name = "cansend"
path = "src/bin/cansend.rs"

